--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Recetas",
-  "name": "Platzi Recetas",
+  "short_name": "CookIt!",
+  "name": "CookIt!",
   "icons": [
     {
       "src": "/icon.png",
